update contact us section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <div class="contact">
 
-            <div>
+            <div class="c1">
                 <h1>By Phone</h1>
                 <div>
                     <p>1234567890</p>
@@ -162,7 +162,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="c1">
 
                 <h1>START A NEW CASE</h1>
                 <div>
@@ -172,7 +172,7 @@
 
             </div>
 
-            <div>
+            <div class="c1">
                 <h1>LIVE CHAT</h1>
                 <div>
                     <p>Chat with a member of our in-house team.</p>
