--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <section class="mainbody">
         <div class="mheading">
-            <h1>Services</h1>
+            <h1 style="font-size: 2rem;">Services</h1>
         </div>
         <div class="main">
 
@@ -227,7 +227,7 @@
 
     </section>
 
-    
+
     <!-- footar section  -->
 
     <section class="contactUs">
