--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internship Task</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="sidebar" onclick="myFunction()">
-                <a href="javascript:void(0)">☰</a>
+                <a class="bar" href="javascript:void(0)">☰</a>
             </div>
 
         </nav>
@@ -238,7 +238,7 @@
 
             <div class="c1">
 
-                <i style=" text-align: center; display: block; font-size: 30px; margin-bottom: 20px;" class="fas fa-phone"></i>
+                <i class="fas fa-phone"></i>
                 <h1>By Phone</h1>
                 <div>
 
@@ -286,7 +286,7 @@
                 <div class="link">
                     <a href=""><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-linkedin"></i></a>
-                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
                     <a href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
@@ -306,11 +306,14 @@
     <!--====== JS function for navbar ======-->
     <script>
         function myFunction() {
+            var bar = document.querySelector('.bar');
             var showhide = document.getElementById('myLinks');
             if (showhide.style.display === "block") {
                 showhide.style.display = "none";
+                bar.innerHTML = "☰";
             } else {
                 showhide.style.display = "block";
+                bar.innerHTML = "X";
             }
         }
     </script>
