--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <section id="main" class="mainbody">
         <div class="mheading">
-            <h1 style="font-size: 2rem;">Services</h1>
+            <h1 style="font-size: 2rem; color: wheat;">Services</h1>
         </div>
         <div class="main">
 
@@ -279,7 +279,6 @@
                     <a href="#main">Servives</a>
                     <a href="#prod">Products</a>
                     <a href="#gall">Gallery</a>
-                    <!-- <a href="#foot">Contact Us</a> -->
                     <a href="about.html">About</a>
                 </div>
             </div>
