--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div id="myLinks" class="myLinks">
                 <a href="">Home</a>
-                <a href="#main">Servives</a>
+                <a href="#main">Services</a>
                 <a href="#prod">Products</a>
                 <a href="#gall">Gallery</a>
                 <a href="#foot">Contact Us</a>
